--- a/Customer_Shopping_behavior.ipynb
+++ b/Customer_Shopping_behavior.ipynb
@@ -1529,7 +1529,7 @@
     "# Step 1: Connect to PostgreSQL\n",
     "# Replace placeholders with actual details\n",
     "username = \"postgres\"   # default user\n",
-    "password = \"Rashi%402909\"   \n",
+    "password = \"your password\"   \n",
     "host = \"localhost\"\n",
     "port = \"5432\" # default postgreSQL port\n",
     "database = \"customer_behavior\"  #database createrd in pgadmin4\n",
